--- a/Introduction/Views/Product/Create.cshtml
+++ b/Introduction/Views/Product/Create.cshtml
@@ -4,9 +4,10 @@
     ViewData["Title"] = "Create";
 }
 
-<h2>Create</h2>
-
-<h4>Products</h4>
+<h2>Create new product</h2>
+<div>
+    <a asp-action="Index">Back to List</a>
+</div>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -58,7 +59,7 @@
                 </div>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
     </div>
