--- a/Introduction/Views/Product/Index.cshtml
+++ b/Introduction/Views/Product/Index.cshtml
@@ -6,6 +6,9 @@
 
 <h2>@ViewData["Title"]</h2>
 
+<p>
+    <a asp-action="Create">Create New</a>
+</p>
 <table class="table">
     <thead>
         <tr>
@@ -39,6 +42,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.Supplier)
             </th>
+            <th></th>
         </tr>
     </thead>
     <tbody>
@@ -74,6 +78,9 @@
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Supplier.CompanyName)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.ProductId">Edit</a>
                 </td>
             </tr>
         }
