--- a/Module2/Views/Category/Index.cshtml
+++ b/Module2/Views/Category/Index.cshtml
@@ -32,9 +32,8 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Description)
             </td>
-
             <td>
-                <img src="data:image/png;base64,@Convert.ToBase64String(item.Picture, 78, item.Picture.Length -78)" />
+                @await Component.InvokeAsync("CategoryImageFixer", new { picture= item.Picture })
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.CategoryId">Edit</a>
