Finished - Task 4. Custom Middleware Created own middleware component for image caching. Full Task Desc: "- Check Content-Type every response and if returned any valid image format:   -- Keep image on the disk (as file)   -- If next request accessing to the same image, get it from cache directory - Support follow options:   -- Path for cache directory   -- Max count of cached images   -- Cache expiration time (if no requests during this time, cache cleaned)"

--- a/Module2/Views/Home/Index.cshtml
+++ b/Module2/Views/Home/Index.cshtml
@@ -4,8 +4,10 @@
 
 <div class="row">
     <div class="col-md-12">
-        <h2>Welcome!</h2>
-        <p>Module2 project</p>
+        <h2>Welcome to Module 2</h2>
+        <p>Click on below links to test ImageCacheMiddleware</p>
+        <a href="@Url.Content("~/thumbs/bmw.png")">Bmw</a>
+        <a href="@Url.Content("~/thumbs/mercedes.png")">Mercedes</a>
+        <a href="@Url.Content("~/thumbs/volkswagen.png")">Volkswagen</a>
     </div>
-   
 </div>
