Module3.Task1 Completed. Added 2 different layouts. Added 2 sections to Layout1

--- a/Module3/Views/Category/Index.cshtml
+++ b/Module3/Views/Category/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Module2.Models.Categories>
+﻿@model IEnumerable<Module3.Models.Categories>
 
 @{
     ViewData["Title"] = "Categories";
@@ -50,3 +50,7 @@
         }
     </tbody>
 </table>
+
+@section Footers{
+    <span class="section-span">Categories cannot be edited!</span>
+}
