Finished Module3.Task1.Pasrt2 Added breadcrumbs

--- a/Module3/Views/Shared/_Layout1.cshtml
+++ b/Module3/Views/Shared/_Layout1.cshtml
@@ -57,6 +57,9 @@
     <partial name="_CookieConsentPartial" />
 
     <div class="container body-content">
+        @await Component.InvokeAsync(nameof(Breadcrumbs))
+
+
         @RenderBody()
         <hr />
 
