--- a/Module3/Views/Product/Index.cshtml
+++ b/Module3/Views/Product/Index.cshtml
@@ -1,10 +1,8 @@
-﻿@model IEnumerable<Module3.Models.Products>
+﻿@model IEnumerable<Products>
 
 @{
     ViewData["Title"] = "Products";
 }
-
-<h2>@ViewData["Title"]</h2>
 
 <p>
     <a asp-action="Create">Create New</a>
