--- a/Module3/Views/Shared/_Layout2.cshtml
+++ b/Module3/Views/Shared/_Layout2.cshtml
@@ -42,9 +42,9 @@
     <partial name="_CookieConsentPartial" />
 
     <div class="container body-content">
-        <img src="~/thumbs/mercedes.png" alt="Mercedes" />
-        <img src="~/thumbs/bmw.png" alt="BMW" />
-        <img src="~/thumbs/volkswagen.png" alt="Volkswagen" />
+        <img src="~/thumbs/mercedes.png" alt="Mercedes" height="50" />
+        <img src="~/thumbs/bmw.png" alt="BMW" height="50" />
+        <img src="~/thumbs/volkswagen.png" alt="Volkswagen" height="50" />
 
         @RenderBody()
         <hr />
