--- a/Module3/Views/_ViewImports.cshtml
+++ b/Module3/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Module3
 @using Module3.Models
 @using Module3.ViewComponents
+@using Module3.HtmlHelpers
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
