--- a/Module3/Views/_ViewImports.cshtml
+++ b/Module3/Views/_ViewImports.cshtml
@@ -3,3 +3,4 @@
 @using Module3.ViewComponents
 @using Module3.HtmlHelpers
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, Module3
